--- a/lib/schemas/definitions/nglp/book/1.0.0/layouts/main.xml
+++ b/lib/schemas/definitions/nglp/book/1.0.0/layouts/main.xml
@@ -6,11 +6,11 @@
       <show-announcements>true</show-announcements>
       <show-body>false</show-body>
       <show-hero-image>false</show-hero-image>
-      <variant>columns</variant>
+      <variant>summary</variant>
       <slots>
         <header/>
         <subheader/>
-        <summary>
+        <summary hide-when-empty="true">
           {{props.description}}
         </summary>
       </slots>
@@ -36,14 +36,114 @@
     </descendant-list>
     <contributor-list>
       <background>light</background>
-      <limit>4</limit>
+      <limit>8</limit>
       <slots>
         <header>
           Contributors
         </header>
       </slots>
     </contributor-list>
-    <metadata/>
+    <detail>
+      <background>light</background>
+      <show-announcements>false</show-announcements>
+      <show-body>false</show-body>
+      <show-hero-image>false</show-hero-image>
+      <variant>columns</variant>
+      <slots>
+        <header>Metadata</header>
+        <items-a>
+          {% mditem %}
+            {% mdvalue label: "Language" %}
+              {{props.language}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Subjects" %}
+              {{props.subjects}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Keywords" %}
+              {{props.keywords}}
+            {% endmdvalue %}
+          {% endmditem %}
+        </items-a>
+        <items-b>
+          {% if ancestors.series %}
+            {% mditem %}
+              {% mdvalue label: "Series" %}
+                {{ancestors.series}}
+              {% endmdvalue %}
+            {% endmditem %}
+          {% endif %}
+          {% mditem %}
+            {% mdvalue label: "Edition" %}
+              {{props.edition}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Version" %}
+              {{props.version}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "License" %}
+              {{props.cc_license}}
+            {% endmdvalue %}
+          {% endmditem %}
+        </items-b>
+        <items-c>
+          {% mditem %}
+            {% mdvalue label: "Published" %}
+              {{entity.published}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Publisher" %}
+              {{props.publisher}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Publisher Location" %}
+              {{props.publisher_location}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Print ISBN" %}
+              {{props.print_isbn}}
+            {% endmdvalue %}
+          {% endmditem %}
+          {% mditem %}
+            {% mdvalue label: "Ebook ISBN" %}
+              {{props.ebook_isbn}}
+            {% endmdvalue %}
+          {% endmditem %}
+        </items-c>
+        <items-d>
+          {% if props.pdf_version.exists %}
+            {% mditem %}
+              {% mdvalue label: "PDF Version" %}
+                {% asset props.pdf_version %}
+                  Download
+                {% endasset %}
+              {% endmdvalue %}
+            {% endmditem %}
+          {% endif %}
+          {% if props.online_version.exists %}
+            {% mditem %}
+              {% mdvalue label: "Online Version" %}
+                {{props.online_version}}
+              {% endmdvalue %}
+            {% endmditem %}
+          {% endif %}
+          {% mditem %}
+            {% mdvalue label: "Purchase URL" %}
+              {{props.purchase_url}}
+            {% endmdvalue %}
+          {% endmditem %}
+        </items-d>
+      </slots>
+    </detail>
     <link-list>
       <background>light</background>
       <dynamic-ordering-definition>
