--- a/lib/schemas/definitions/nglp/book_section/1.0.0/layouts/navigation.xml
+++ b/lib/schemas/definitions/nglp/book_section/1.0.0/layouts/navigation.xml
@@ -6,7 +6,7 @@
       <hide-metadata>true</hide-metadata>
       <slots>
         <entity-label>
-          Text
+          Details
         </entity-label>
       </slots>
     </navigation>
