--- a/lib/schemas/definitions/default/community/1.0.0/layouts/main.xml
+++ b/lib/schemas/definitions/default/community/1.0.0/layouts/main.xml
@@ -29,21 +29,6 @@
       </slots>
     </descendant-list>
     <descendant-list>
-      <background>none</background>
-      <ordering-identifier>books</ordering-identifier>
-      <selection-limit>8</selection-limit>
-      <selection-mode>named</selection-mode>
-      <selection-source>self</selection-source>
-      <entity-context>none</entity-context>
-      <show-hero-image>false</show-hero-image>
-      <see-all-button-label>See All Books</see-all-button-label>
-      <see-all-ordering-identifier>books</see-all-ordering-identifier>
-      <variant>summary</variant>
-      <slots>
-        <block-header>Books</block-header>
-      </slots>
-    </descendant-list>
-    <descendant-list>
       <background>light</background>
       <selection-limit>3</selection-limit>
       <selection-mode>property</selection-mode>
@@ -93,6 +78,33 @@
       <slots>
         <block-header>Featured Research Units</block-header>
         <block-header-fallback>Research Units</block-header-fallback>
+      </slots>
+    </descendant-list>
+    <descendant-list>
+      <background>none</background>
+      <ordering-identifier>books</ordering-identifier>
+      <selection-limit>3</selection-limit>
+      <selection-mode>property</selection-mode>
+      <selection-fallback-mode>dynamic</selection-fallback-mode>
+      <selection-property-path>featured.books</selection-property-path>
+      <dynamic-ordering-definition>
+        <filter>
+          <schema namespace="nglp" identifier="book"/>
+        </filter>
+        <order path="entity.published" dir="desc"/>
+        <order path="entity.created_at" dir="desc"/>
+        <render mode="flat"/>
+        <select direct="descendants"/>
+      </dynamic-ordering-definition>
+      <selection-source>self</selection-source>
+      <entity-context>none</entity-context>
+      <show-hero-image>false</show-hero-image>
+      <see-all-button-label>See All Books</see-all-button-label>
+      <see-all-ordering-identifier>books</see-all-ordering-identifier>
+      <variant>cards</variant>
+      <slots>
+        <block-header>Featured Books</block-header>
+        <block-header-fallback>Recent Books</block-header-fallback>
       </slots>
     </descendant-list>
     <descendant-list>
