[F] Implement harvesting improvements for PB
* Add ability to have reusable liquid templates in mapping template
* Add support for controlled vocabulary properties
* Add common licenses CV
* Add license CV props to book and book sections
* Add index / position props when enumerating in harvesting
* Update default pressbooks harvesting mapping template

--- a/lib/schemas/definitions/nglp/book/1.0.0/layouts/hero.xml
+++ b/lib/schemas/definitions/nglp/book/1.0.0/layouts/hero.xml
@@ -43,8 +43,8 @@
           {% if props.ebook_isbn.exists %}
             {% sbitem icon: "isbn" %} EBook ISBN: {{ props.ebook_isbn }} {% endsbitem %}
           {% endif %}
-          {% if props.cc_license.exists %}
-            {% sbitem icon: "cc" %} {{ props.cc_license }} License {% endsbitem %}
+          {% if props.license.exists %}
+            {% sbitem icon: "cc" %} {{ props.license }} License {% endsbitem %}
           {% endif %}
         </header-sidebar>
         <metadata/>
