--- a/lib/schemas/definitions/nglp/book/1.0.0/layouts/metadata.xml
+++ b/lib/schemas/definitions/nglp/book/1.0.0/layouts/metadata.xml
@@ -56,7 +56,7 @@
           {% endmditem %}
           {% mditem %}
             {% mdvalue label: "License" %}
-              {{props.cc_license}}
+              {{props.license}}
             {% endmdvalue %}
           {% endmditem %}
         </items-b>
