[B] Ensure that ordering identifiers are set for certain templates
These values were missing and are preventing sibling navigation

--- a/lib/schemas/definitions/nglp/journal_issue/1.0.0/layouts/main.xml
+++ b/lib/schemas/definitions/nglp/journal_issue/1.0.0/layouts/main.xml
@@ -33,6 +33,7 @@
     </contributor-list>
     <ordering>
       <background>light</background>
+      <ordering-identifier>issues</ordering-identifier>
       <ordering-source>parent</ordering-source>
       <selection-source>self</selection-source>
       <slots>
