--- a/lib/schemas/definitions/nglp/journal_volume/1.0.0/layouts/main.xml
+++ b/lib/schemas/definitions/nglp/journal_volume/1.0.0/layouts/main.xml
@@ -23,6 +23,7 @@
     </descendant-list>
     <ordering>
       <background>light</background>
+      <ordering-identifier>volumes</ordering-identifier>
       <ordering-source>parent</ordering-source>
       <selection-source>self</selection-source>
       <slots>
