--- a/lib/schemas/definitions/nglp/journal/1.0.0/layouts/main.xml
+++ b/lib/schemas/definitions/nglp/journal/1.0.0/layouts/main.xml
@@ -21,6 +21,7 @@
         <filter>
           <schema namespace="nglp" identifier="journal_issue"/>
         </filter>
+        <order path="entity.published" dir="desc" nulls="last"/>
         <order path="ancestors.volume.props.sortable_number#integer" dir="desc"/>
         <order path="ancestors.volume.title" dir="desc"/>
         <order path="props.sortable_number#integer" dir="desc"/>
@@ -30,15 +31,14 @@
       </dynamic-ordering-definition>
       <ordering-identifier>issues</ordering-identifier>
       <see-all-button-label>See All Articles</see-all-button-label>
-      <selection-fallback-mode>dynamic</selection-fallback-mode>
       <selection-limit>1</selection-limit>
-      <selection-mode>named</selection-mode>
+      <selection-mode>dynamic</selection-mode>
       <selection-source>self</selection-source>
       <entity-context>none</entity-context>
       <show-hero-image>true</show-hero-image>
       <show-nested-entities>true</show-nested-entities>
       <title>Current Issue</title>
-      <use-selection-fallback>true</use-selection-fallback>
+      <use-selection-fallback>false</use-selection-fallback>
       <variant>summary</variant>
       <slots>
         <block-header>Current Issue</block-header>
@@ -50,6 +50,7 @@
         <filter>
           <schema namespace="nglp" identifier="journal_issue"/>
         </filter>
+        <order path="entity.published" dir="desc" nulls="last"/>
         <order path="ancestors.volume.props.sortable_number#integer" dir="desc"/>
         <order path="ancestors.volume.title" dir="desc"/>
         <order path="props.sortable_number#integer" dir="desc"/>
@@ -79,6 +80,7 @@
         <filter>
           <schema namespace="nglp" identifier="collected_volume"/>
         </filter>
+        <order path="entity.published" dir="desc" nulls="last"/>
         <order path="props.sortable_number#integer" dir="desc"/>
         <order path="entity.title" dir="desc"/>
         <render mode="flat"/>
@@ -106,6 +108,7 @@
         <filter>
           <schema namespace="nglp" identifier="collected_volume"/>
         </filter>
+        <order path="entity.published" dir="desc" nulls="last"/>
         <order path="props.sortable_number#integer" dir="desc"/>
         <order path="entity.title" dir="desc"/>
         <render mode="flat"/>
